2006-04-08  Florian Boor <florian@kernelconcepts.de>

	* Initial import, basically working.