@@ -4,5 +4,5 @@ _Name=Window Selector
 _Comment=Window list and selector panel applet.
 Exec=gpe-windowlist
 Type=PanelApp
-Icon=/usr/share/gpe/pixmaps/default/gpe-windowlist.png
+Icon=@prefix@/share/gpe/pixmaps/default/gpe-windowlist.png
 Categories=Panel;Utility;GPE;
